# llm-operator

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
helm/: Chart.yaml
helm/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  role.yaml  rolebinding.yaml
src/: lock_manager.py
src/kube/: module.py
src/litellm_key/: crd.py  manager.py  operator.py
src/litellm_model/: crd.py  manager.py  operator.py
src/litellm_team/: __init__.py  crd.py  manager.py  operator.py
src/logging_interceptor/: handler.py
src/n8n_admin_user/: __init__.py  crd.py  manager.py  operator.py
src/n8n_api_key/: __init__.py  api.http  crd.py  manager.py  operator.py
src/ollama_model/: crd.py  manager.py  operator.py
src/openwebui_banner/: __init__.py  crd.py  crd_v1.py  crd_v2.py  manager.py  operator.py
src/openwebui_channel/: __init__.py  crd.py  crd_v1.py  crd_v2.py  manager.py  operator.py
src/openwebui_group/: __init__.py  crd.py  crd_v1.py  crd_v2.py  manager.py  operator.py
src/openwebui_prompt/: __init__.py  crd.py  crd_v1.py  crd_v2.py  manager.py  operator.py
src/openwebui_tool_server/: __init__.py  crd.py  crd_v1.py  crd_v2.py  manager.py  operator.py
src/uptime_kuma_monitor/: __init__.py  crd.py  manager.py  operator.py
src/uptime_kuma_setup/: __init__.py  crd.py  manager.py  operator.py
