[project]
name = "llm-operator"
version = "0.1.0"
description = "Kubernetes operator for litellm"
requires-python = "==3.13.*"
dependencies = [
    "typer",
    "kopf",
    "kr8s",
    "kubecrd",
    "apischema",
    "kubernetes",
    "requests",
    "tenacity",
    "pyyaml",
    "asyncio",
    "prometheus-client",
    "loguru",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "isort",
    "mypy",
    "injector",
    "redis>=5.0.0",
    "python-redis-lock>=4.0.0",
    "uptime-kuma-api>=1.2.1",
]
